contrast issues

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -19,8 +19,8 @@
 }
 
 .navbar-brand-img {
-  width: 100px;
-  height: 31.001px;
+  width: 8rem;
+  height: 2.48rem;
   min-height: calc(var(--vh) * 6);
   max-height: calc(var(--vh) * 6);
   min-width: calc(var(--vh) * 6 * 3.2257);
