--- a/app/assets/stylesheets/pages/home/_home_specialists.scss
+++ b/app/assets/stylesheets/pages/home/_home_specialists.scss
@@ -46,6 +46,6 @@
   right: 0;
   left: 0;
   a {
-    color: $color-2;
+    color: $color-1;
   }
 }
